--- a/About Us.html
+++ b/About Us.html
@@ -2,22 +2,33 @@
 <html>
 <head>
 	<link rel="stylesheet" href="css/style-aboutus.css">
+	<link rel="stylesheet" href="css/style-twoimages.css">
+	<link rel="stylesheet" href="css/style-nav-footer.css">
 	<meta charset="utf-8">
 	<title>About Us</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
 	<link rel="stylesheet" href="css/RWD/screen.css">
 	<link rel="stylesheet" href="css/RWD/twoimages.css">
 
-	<!--<script type="text/javascript" src="./js/roll/._jquery.parallax-1.1.3"></script>
-	<script type="text/javascript" src="./js/roll/jquery.localscroll-1.2.7-min"></script>
-	<script type="text/javascript" src="./js/roll/jquery.parallax-1.1.3"></script>
-	<script type="text/javascript" src="./js/roll/jquery.scrollTo-1.4.2-min"></script>
+	<link rel="stylesheet" href="css/RWDsmall/screen.css">
+	<link rel="stylesheet" href="css/RWDsmall/twoimages.css">
+
+
+	<script type="text/javascript" src="js/jquery-3.1.1.js"></script>
+	<script type="text/javascript" src="js/roll/._jquery.parallax-1.1.3.js"></script>
+	<script type="text/javascript" src="js/roll/jquery.localscroll-1.2.7-min.js"></script>
+	<script type="text/javascript" src="js/roll/jquery.parallax-1.1.3.js"></script>
+	<script type="text/javascript" src="js/roll/jquery.scrollTo-1.4.2-min.js"></script>
 	<script type="text/javascript">
 		$(document).ready(function(){
 			//$('#nav').localscroll-1(800);
 			$('#above').parallax("50%", 0.1);
 			$('#second').parallax("50%", 0.1);
 		})
-	</script>-->
+	</script>
+
+	<script type="text/javascript" src="js/hamburger.js"></script>
 
 </head>
 <body>
@@ -29,6 +40,7 @@
         </div>
 	</div>
 	<nav class="site-nav">
+		<div class="big-nav">
 		<ul class="clear" id="nav">
 			<li><div><a href="./Personal Website.html">HOME</a></div></li>
 			<li><div><a href="#fifth" id="own">ABOUT US</a></div></li>
@@ -37,7 +49,20 @@
 			<li><div><a href="./Prose.html">PROSE</a></div></li>
 			<li><div><a href="#intro">TRIVIA</a></div></li>
 		</ul>
-	</nav>	
+		</div>
+	</nav>
+		<div class="small-nav">
+			<span class="alt-nav">&#9776</span>
+			<ul>
+				<li><div><a href="./Personal Website.html">HOME</a></div></li>
+				<li><div><a href="#fifth" id="own">ABOUT US</a></div></li>
+				<li><div><a href="./Photography.html">PHOTOGRAPHY</a></div></li>
+				<li><div><a href="./Illustration.html">ILLUSTRATION</a></div></li>
+				<li><div><a href="./Prose.html">PROSE</a></div></li>
+				<li><div><a href="./Trivia.html">TRIVIA</a></div></li>
+			</ul>
+		</div>
+
 	<div class="container">
 		<div class="center">
 			<div class="text-center">
