--- a/Ariel Wu.html
+++ b/Ariel Wu.html
@@ -2,13 +2,15 @@
 <html>
 <head>
 	<link rel="stylesheet" href="css/style-arielwu.css">
+	<link rel="stylesheet" href="css/style-nav-footer.css">
 	<meta charset="utf-8">
-	<title>Ariel Wu</title>
+	<title>Little Black</title>
 
-	<script type="text/javascript" src="./js/roll/._jquery.parallax-1.1.3"></script>
-	<script type="text/javascript" src="./js/roll/jquery.localscroll-1.2.7-min"></script>
-	<script type="text/javascript" src="./js/roll/jquery.parallax-1.1.3"></script>
-	<script type="text/javascript" src="./js/roll/jquery.scrollTo-1.4.2-min"></script>
+	<script type="text/javascript" src="js/jquery-3.1.1.js"></script>
+	<script type="text/javascript" src="js/roll/._jquery.parallax-1.1.3.js"></script>
+	<script type="text/javascript" src="js/roll/jquery.localscroll-1.2.7-min.js"></script>
+	<script type="text/javascript" src="js/roll/jquery.parallax-1.1.3.js"></script>
+	<script type="text/javascript" src="js/roll/jquery.scrollTo-1.4.2-min.js"></script>
 	<script type="text/javascript">
 		$(document).ready(function(){
 			//$('#nav').localscroll-1(800);
@@ -16,7 +18,6 @@
 			$('#second').parallax("50%", 0.1);
 		})
 	</script>
-	<!--<script type="text/javascript" src="./js/jquery-3.1.1.js"></script>-->
 
 </head>
 <body>
@@ -46,14 +47,20 @@
 	<div class="container">
 		<div class="center">
 			<div class="text-center">
-				<h2>- Ariel Wu -</h2>
+				<h2>- Little Black -</h2>
 				<div class="line"></div>
 			</div>
 			
 			<img src="./images/illustration/img_luffy.jpg" />
-			<p></p>
+			<p class="name">吳汶倩</p>
+			<p class="birth">生日: 4 / 15</p>
+			<p class="interest">興趣 : 攝影 繪圖 排球 羽球</p>
+			<div class="line"></div>
+			<p class="school">經歷</p>
+			<p class="university">國立台北教育大學 數位科技設計學系 尚未畢業</p>
+			<p class="juniorhigh">新北市立板橋高中</p>
 			<div id="button">
-				<a href="./Ariel Wu.html"><div class="button" id="left"><p>Ariel</p></div></a>
+				<a href="./Ariel Wu.html"><div class="button" id="left"><p>Black</p></div></a>
 				<a href="./Banana Hunter.html"><div class="button" id="right"><p>Banana</p></div></a>
 			</div>
 		</div>
