--- a/Illustration-computer.html
+++ b/Illustration-computer.html
@@ -2,23 +2,26 @@
 <html>
 <head>
 	<link rel="stylesheet" href="css/style-illustration-computer.css">
+	<link rel="stylesheet" href="css/style-manyimages.css">
+	<link rel="stylesheet" href="css/style-nav-footer.css">
 	<meta charset="utf-8">
 	<title>Illustration</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="css/RWD/screen.css">
 	<link rel="stylesheet" href="css/RWD/manyimages.css">
 
-	<!--<script type="text/javascript" src="./js/roll/._jquery.parallax-1.1.3"></script>
-	<script type="text/javascript" src="./js/roll/jquery.localscroll-1.2.7-min"></script>
-	<script type="text/javascript" src="./js/roll/jquery.parallax-1.1.3"></script>
-	<script type="text/javascript" src="./js/roll/jquery.scrollTo-1.4.2-min"></script>
+	<script type="text/javascript" src="js/jquery-3.1.1.js"></script>
+	<script type="text/javascript" src="js/roll/._jquery.parallax-1.1.3.js"></script>
+	<script type="text/javascript" src="js/roll/jquery.localscroll-1.2.7-min.js"></script>
+	<script type="text/javascript" src="js/roll/jquery.parallax-1.1.3.js"></script>
+	<script type="text/javascript" src="js/roll/jquery.scrollTo-1.4.2-min.js"></script>
 	<script type="text/javascript">
 		$(document).ready(function(){
 			//$('#nav').localscroll-1(800);
 			$('#above').parallax("50%", 0.1);
 			$('#second').parallax("50%", 0.1);
 		})
-	</script>-->
+	</script>
 
 </head>
 <body>
@@ -38,7 +41,7 @@
 			<li><div><a href="./Prose.html">PROSE</a></div></li>
 			<li><div><a href="./Trivia.html">TRIVIA</a></div></li>
 		</ul>
-	</nav>	
+	</nav>
 	<div class="container">
 		<div class="center">
 			<div class="text-center">
