--- a/Photography.html
+++ b/Photography.html
@@ -2,32 +2,33 @@
 <html>
 <head>
 	<link rel="stylesheet" href="css/style-photography.css">
+	<link rel="stylesheet" href="css/style-manyimages.css">
+	<link rel="stylesheet" href="css/style-nav-footer.css">
 	<meta charset="utf-8">
 	<title>Phtography</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
 	<link rel="stylesheet" href="css/RWD/screen.css">
 	<link rel="stylesheet" href="css/RWD/manyimages.css">
 
-	<!--<script type="text/javascript">
-		$(document).ready(function() {
-	 		$('.grid').masonry({
-	    		itemSelector:'.grid-item',
-	    		columnWidth:200,
-	    		gutter:20
-	  		});
-		});
-	</script>-->
-	<!--<script type="text/javascript" src="./js/roll/._jquery.parallax-1.1.3"></script>
-	<script type="text/javascript" src="./js/roll/jquery.localscroll-1.2.7-min"></script>
-	<script type="text/javascript" src="./js/roll/jquery.parallax-1.1.3"></script>
-	<script type="text/javascript" src="./js/roll/jquery.scrollTo-1.4.2-min"></script>
+	<link rel="stylesheet" href="css/RWDsmall/screen.css">
+	<link rel="stylesheet" href="css/RWDsmall/manyimages.css">
+
+	<script type="text/javascript" src="js/jquery-3.1.1.js"></script>
+	<script type="text/javascript" src="js/roll/._jquery.parallax-1.1.3.js"></script>
+	<script type="text/javascript" src="js/roll/jquery.localscroll-1.2.7-min.js"></script>
+	<script type="text/javascript" src="js/roll/jquery.parallax-1.1.3.js"></script>
+	<script type="text/javascript" src="js/roll/jquery.scrollTo-1.4.2-min.js"></script>
 	<script type="text/javascript">
 		$(document).ready(function(){
-			//$('#nav').localscroll-1(800);
+			$('#nav').localscroll(800);
 			$('#above').parallax("50%", 0.1);
 			$('#second').parallax("50%", 0.1);
-		});
-	</script>-->
+		})
+	</script>
+
+	<script type="text/javascript" src="js/hamburger.js"></script>
+	
 	<!--<script type="text/javascript" src="./js/jquery-3.1.1"></script>
 	<script type="text/javascript">
 	$(document).ready(function(){
@@ -52,15 +53,30 @@
         </div>
 	</div>
 	<nav class="site-nav">
+		<div class="big-nav">
 		<ul class="clear" id="nav">
 			<li><div><a href="./Personal Website.html">HOME</a></div></li>
 			<li><div><a href="./About Us.html">ABOUT US</a></div></li>
 			<li><div><a href="#fourth" id="own">PHOTOGRAPHY</a></div></li>
-			<li><div><a href="./ILLUSTRATION.html">ILLUSTRATION</a></div></li>
+			<li><div><a href="./Illustration.html">ILLUSTRATION</a></div></li>
 			<li><div><a href="./Prose.html">PROSE</a></div></li>
 			<li><div><a href="./Trivia.html">TRIVIA</a></div></li>
 		</ul>
-	</nav>	
+		</div>
+	</nav>
+
+		<div class="small-nav">
+			<span class="alt-nav">&#9776</span>
+			<ul>
+				<li><div><a href="./Personal Website.html">HOME</a></div></li>
+				<li><div><a href="./About Us.html">ABOUT US</a></div></li>
+				<li><div><a href="#fourth" id="own">PHOTOGRAPHY</a></div></li>
+				<li><div><a href="./Illustration.html">ILLUSTRATION</a></div></li>
+				<li><div><a href="./Prose.html">PROSE</a></div></li>
+				<li><div><a href="./Trivia.html">TRIVIA</a></div></li>
+			</ul>
+		</div>
+
 	<div class="container">
 		<div class="center">
 			<div class="text-center" class="clear">
