--- a/Prose.html
+++ b/Prose.html
@@ -2,13 +2,18 @@
 <html>
 <head>
 	<link rel="stylesheet" href="css/style-prose.css">
+	<link rel="stylesheet" href="css/style-twoimages.css">
+	<link rel="stylesheet" href="css/style-nav-footer.css">
 	<meta charset="utf-8">
 	<title>Prose</title>
+	<link rel="stylesheet" href="css/RWD/screen.css">
+	<link rel="stylesheet" href="css/RWD/twoimages.css">
 
-	<script type="text/javascript" src="./js/roll/._jquery.parallax-1.1.3"></script>
-	<script type="text/javascript" src="./js/roll/jquery.localscroll-1.2.7-min"></script>
-	<script type="text/javascript" src="./js/roll/jquery.parallax-1.1.3"></script>
-	<script type="text/javascript" src="./js/roll/jquery.scrollTo-1.4.2-min"></script>
+	<script type="text/javascript" src="js/jquery-3.1.1.js"></script>
+	<script type="text/javascript" src="js/roll/._jquery.parallax-1.1.3.js"></script>
+	<script type="text/javascript" src="js/roll/jquery.localscroll-1.2.7-min.js"></script>
+	<script type="text/javascript" src="js/roll/jquery.parallax-1.1.3.js"></script>
+	<script type="text/javascript" src="js/roll/jquery.scrollTo-1.4.2-min.js"></script>
 	<script type="text/javascript">
 		$(document).ready(function(){
 			//$('#nav').localscroll-1(800);
@@ -16,8 +21,8 @@
 			$('#second').parallax("50%", 0.1);
 		})
 	</script>
-
 </head>
+
 <body>
 	<div id="above" style="background-position: 50% 0px;">
 		<div class="story">
@@ -27,6 +32,7 @@
         </div>
 	</div>
 	<nav class="site-nav">
+		<div class="big-nav">
 		<ul class="clear" id="nav">
 			<li><div><a href="./Personal Website.html">HOME</a></div></li>
 			<li><div><a href="./About Us.html">ABOUT US</a></div></li>
@@ -35,9 +41,45 @@
 			<li><div><a href="#second" id="own">PROSE</a></div></li>
 			<li><div><a href="./Trivia.html">TRIVIA</a></div></li>
 		</ul>
-	</nav>	
+		</div>
+	</nav>
+		<div class="small-nav">
+			<span class="alt-nav">&#9776</span>
+			<ul>
+				<li><div><a href="./Personal Website.html">HOME</a></div></li>
+				<li><div><a href="./About Us.html">ABOUT US</a></div></li>
+				<li><div><a href="./Photography.html">PHOTOGRAPHY</a></div></li>
+				<li><div><a href="./Illustration.html">ILLUSTRATION</a></div></li>
+				<li><div><a href="#second" id="own">PROSE</a></div></li>
+				<li><div><a href="./Trivia.html">TRIVIA</a></div></li>
+			</ul>
+		</div>
 	<div class="container">
 		<div class="center">
+			<div class="text-center">
+				<h2>- CATEGORIES -</h2>
+				<div class="line"></div>
+			</div>
+		</div>
+		<div class="screen">
+		<a href="./Illustration-hand.html">
+			<div class="left">
+				<div class="hover">
+					
+					<img src="./images/illustration/img_luffy.jpg" />
+					<img src="./images/prose/img_novel.png" />
+				</div>
+			</div>
+		</a>
+		<a href="./Illustration-computer.html">
+			<div class="right">
+				<div class="hover">
+					
+					<img src="./images/illustration/img_mermaid.jpg" />
+					<img src="./images/prose/img_prose.png" />
+				</div>
+			</div>
+		</a>
 		</div>
 	</div>
 	<footer class="clear">
