--- a/Banana Hunter.html
+++ b/Banana Hunter.html
@@ -52,8 +52,8 @@
 			</div>
 			
 			<img src="./images/illustration/img_mermaid.jpg" />
-			<p class="name">吳汶倩</p>
-			<p class="birth">生日: 4 / 15</p>
+			<p class="name">葉容辰</p>
+			<p class="birth">生日: 4 / 20</p>
 			<p class="interest">興趣 : 攝影 繪圖 排球 羽球</p>
 			<div class="line"></div>
 			<p class="school">經歷</p>
