--- a/About Us.html
+++ b/About Us.html
@@ -73,7 +73,7 @@
 		<a href="./Ariel Wu.html">
 			<div class="left">
 				<div class="hover">
-					<img src="./images/illustration/img_handpainting.jpg" />
+					<img src="./images/aboutus/img_Ariel.jpg" />
 					<img src="./images/illustration/img_luffy.jpg" />
 				</div>
 			</div>
@@ -81,7 +81,7 @@
 		<a href="./Banana Hunter.html">
 			<div class="right">
 				<div class="hover">
-					<img src="./images/illustration/img_computergraphic.jpg" />
+					<img src="./images/aboutus/img_Banana.jpg" />
 					<img src="./images/illustration/img_mermaid.jpg" />
 				</div>
 			</div>
@@ -91,6 +91,7 @@
 		<p>
 			<a href="#">^</a>
 		</p>
+		<p id="text">Copyrights 2016 / Design by Black and Banana</p>
 	</footer>
 </body>
 </html>
