--- a/Banana Hunter.html
+++ b/Banana Hunter.html
@@ -54,11 +54,11 @@
 			<img src="./images/illustration/img_mermaid.jpg" />
 			<p class="name">葉容辰</p>
 			<p class="birth">生日: 4 / 20</p>
-			<p class="interest">興趣 : 閱讀 排球 跟林靜講話</p>
+			<p class="interest">興趣 : 攝影 繪圖 排球 羽球</p>
 			<div class="line"></div>
 			<p class="school">經歷</p>
 			<p class="university">國立台北教育大學 數位科技設計學系 尚未畢業</p>
-			<p class="juniorhigh">台南私立港明高中</p>
+			<p class="juniorhigh">新北市立板橋高中</p>
 			<div id="button">
 				<a href="./Ariel Wu.html"><div class="button" id="left"><p>Black</p></div></a>
 				<a href="./Banana Hunter.html"><div class="button" id="right"><p>Banana</p></div></a>
@@ -69,6 +69,7 @@
 		<p>
 			<a href="#" class="top">^</a>
 		</p>
+		<p id="text">Copyrights 2016 / Design by Black and Banana</p>
 	</footer>
 </body>
 </html>
