--- a/Trivia.html
+++ b/Trivia.html
@@ -2,7 +2,6 @@
 <html>
 <head>
 	<link rel="stylesheet" href="css/style-trivia.css">
-	<link rel="stylesheet" href="css/style-twoimages.css">
 	<link rel="stylesheet" href="css/style-nav-footer.css">
 	<meta charset="utf-8">
 	<title>TRIVIA</title>
@@ -41,12 +40,21 @@
 	</nav>	
 	<div class="container">
 		<div class="center">
+			<div class="text-center">
+				<h2>- Something Interesting -</h2>
+				<div class="line"></div>
+			</div>
 		</div>
+		<div class="hover"><a href="https://www.facebook.com/%E3%84%8E%E5%AF%B6%E6%98%9F%E7%90%83-722716767876424/">
+				<img src="./images/trivia/img_pongpong.png" />
+				<img src="./images/illustration/img_crry.png">
+		</a></div>
 	</div>
 	<footer class="clear">
 		<p>
 			<a href="#">^</a>
 		</p>
+		<p id="text">Copyrights 2016 / Design by Black and Banana</p>
 	</footer>
 </body>
 </html>
