--- a/Illustration-computer.html
+++ b/Illustration-computer.html
@@ -108,6 +108,7 @@
 		<p>
 			<a href="#">^</a>
 		</p>
+		<p id="text">Copyrights 2016 / Design by Black and Banana</p>
 	</footer>
 </body>
 </html>
