--- a/Illustration.html
+++ b/Illustration.html
@@ -21,7 +21,7 @@
 	<script type="text/javascript" src="js/roll/jquery.scrollTo-1.4.2-min.js"></script>
 	<script type="text/javascript">
 		$(document).ready(function(){
-			$('#nav').localscroll(800);
+			/*$('#nav').localscroll(800);*/
 			$('#above').parallax("50%", 0.1);
 			$('#second').parallax("50%", 0.1);
 		})
@@ -93,6 +93,7 @@
 		<p>
 			<a href="#">^</a>
 		</p>
+		<p id="text">Copyrights 2016 / Design by Black and Banana</p>
 	</footer>
 </body>
 </html>
