--- a/Prose-小說集.html
+++ b/Prose-小說集.html
@@ -18,7 +18,7 @@
 	<script type="text/javascript" src="js/roll/jquery.scrollTo-1.4.2-min.js"></script>
 	<script type="text/javascript">
 		$(document).ready(function(){
-			$('#nav').localscroll(800);
+			//$('#nav').localscroll(800);
 			$('#above').parallax("50%", 0.1);
 			$('#second').parallax("50%", 0.1);
 		});
@@ -42,7 +42,7 @@
 			<li><div><a href="./About Us.html">ABOUT US</a></div></li>
 			<li><div><a href="./Photography.html">PHOTOGRAPHY</a></div></li>
 			<li><div><a href="./Illustration.html">ILLUSTRATION</a></div></li>
-			<li><div><a href="#second" id="own">PROSE</a></div></li>
+			<li><div><a href="./Prose.html" id="own">PROSE</a></div></li>
 			<li><div><a href="./Trivia.html">TRIVIA</a></div></li>
 		</ul>
 		</div>
@@ -67,9 +67,9 @@
 		</div>
 		<div class="screen">
 			<ul>
-				<li class="ptitle"><!--文章標題-->
+				<li class="ptitle">123<!--文章標題-->
 					<ul>
-						<li><p><!--文章內容--></p></li>
+						<li><p>123<!--文章內容--></p></li>
 					</ul>
 				</li>
 				<li class="ptitle"><!--文章標題-->
@@ -109,5 +109,6 @@
 		<p>
 			<a href="#">^</a>
 		</p>
+		<p id="text">Copyrights 2016 / Design by Black and Banana</p>
 	</footer>
 </body>
