--- a/Personal Website.html
+++ b/Personal Website.html
@@ -153,7 +153,7 @@
 					</p>
 				</div>
 			</div>
-			<p>Copyrights 2016 / Design by Black and Banana</p>
+			<p id="text">Copyrights 2016 / Design by Black and Banana</p>
 		</div>
 
 </body>
