--- a/Prose.html
+++ b/Prose.html
@@ -62,7 +62,7 @@
 			</div>
 		</div>
 		<div class="screen">
-		<a href="./Illustration-hand.html">
+		<a href="./Prose-小說集.html">
 			<div class="left">
 				<div class="hover">
 					
@@ -71,7 +71,7 @@
 				</div>
 			</div>
 		</a>
-		<a href="./Illustration-computer.html">
+		<a href="./Prose-散文集.html">
 			<div class="right">
 				<div class="hover">
 					
