--- a/Prose.html
+++ b/Prose.html
@@ -8,6 +8,8 @@
 	<title>Prose</title>
 	<link rel="stylesheet" href="css/RWD/screen.css">
 	<link rel="stylesheet" href="css/RWD/twoimages.css">
+	
+	<link rel="icon" type="image/png" href="./images/img_BlueLOGO.png">
 
 	<script type="text/javascript" src="js/jquery-3.1.1.js"></script>
 	<script type="text/javascript" src="js/roll/._jquery.parallax-1.1.3.js"></script>
