--- a/Photography.html
+++ b/Photography.html
@@ -7,6 +7,8 @@
 	<meta charset="utf-8">
 	<title>Phtography</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	
+	<link rel="icon" type="image/png" href="./images/img_BlueLOGO.png">
 
 	<link rel="stylesheet" href="css/RWD/screen.css">
 	<link rel="stylesheet" href="css/RWD/manyimages.css">
