--- a/Illustration-hand.html
+++ b/Illustration-hand.html
@@ -9,6 +9,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="css/RWD/screen.css">
 	<link rel="stylesheet" href="css/RWD/manyimages.css">
+	
+	<link rel="icon" type="image/png" href="./images/img_BlueLOGO.png">
 
 	<script type="text/javascript" src="js/jquery-3.1.1.js"></script>
 	<script type="text/javascript" src="js/roll/._jquery.parallax-1.1.3.js"></script>
