--- a/Banana Hunter.html
+++ b/Banana Hunter.html
@@ -5,6 +5,8 @@
 	<link rel="stylesheet" href="css/style-nav-footer.css">
 	<meta charset="utf-8">
 	<title>Banana Hunter</title>
+	
+	<link rel="icon" type="image/png" href="./images/img_BlueLOGO.png">
 
 	<script type="text/javascript" src="js/jquery-3.1.1.js"></script>
 	<script type="text/javascript" src="js/roll/._jquery.parallax-1.1.3.js"></script>
