--- a/Photography.html
+++ b/Photography.html
@@ -101,7 +101,7 @@
 				<img src="./images/photograph/img_volleyball.jpg" />
 			</div>
 			<div class="img1">
-				<img src="./images/photograph/img_love.jpg" />
+				<img src="./images/photograph/img_love.JPG" />
 			</div>
 			<div class="img1">
 				<img src="./images/photograph/img_coconut.jpg" />
@@ -121,7 +121,7 @@
 				<img src="./images/photograph/img_back.jpg" />
 			</div>
 			<div class="img2">
-				<img src="./images/photograph/img_paper.jpg" />
+				<img src="./images/photograph/img_paper.JPG" />
 			</div>
 			<div class="img2">
 				<img src="./images/photograph/img_cat.jpg" />
@@ -138,7 +138,7 @@
 				<img src="./images/photograph/img_sparrow.jpg" />
 			</div>
 			<div class="img3">
-				<img src="./images/photograph/img_shine.jpg" />
+				<img src="./images/photograph/img_shine.JPG" />
 			</div>
 			<div class="img3">
 				<img src="./images/photograph/img_pudding.jpg" />
