--- a/Illustration-hand.html
+++ b/Illustration-hand.html
@@ -65,7 +65,7 @@
 				<img src="./images/illustration/img_eraser.jpg" />
 			</div>
 			<div class="img1">
-				<img src="./images/illustration/img_winter.jpg" />
+				<img src="./images/illustration/img_winter.JPG" />
 			</div>
 			<div class="img1">
 				<img src="./images/illustration/img_kickball.jpg" />
@@ -79,7 +79,7 @@
 				<img src="./images/illustration/img_eggs.jpg" />
 			</div>
 			<div class="img2">
-				<img src="./images/illustration/img_halloween.jpg" />
+				<img src="./images/illustration/img_halloween.JPG" />
 			</div>
 			<div class="img2">
 				<img src="./images/illustration/img_twogirls.jpg" />
@@ -105,13 +105,13 @@
 				<img src="./images/illustration/img_judy.jpg" />
 			</div>
 			<div class="img3">
-				<img src="./images/illustration/img_body.jpg" />
+				<img src="./images/illustration/img_body.JPG" />
 			</div>
 			<div class="img3">
 				<img src="./images/illustration/img_shine.jpg" />
 			</div>
 			<div class="img3">
-				<img src="./images/illustration/img_giraffe.jpg" />
+				<img src="./images/illustration/img_giraffe.JPG" />
 			</div>
 		</div>		
 		
