--- a/Prose-小說集.html
+++ b/Prose-小說集.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" href="css/style-prose.css">
-	<link rel="stylesheet" href="css/style-prose-p.css">
+	<link rel="stylesheet" href="css/style-prose-n.css">
 	<link rel="stylesheet" href="css/style-nav-footer.css">
 	<meta charset="utf-8">
 	<meta http-equiv="Content-Type" content="text/html">
@@ -18,7 +18,7 @@
 	<script type="text/javascript" src="js/roll/jquery.scrollTo-1.4.2-min.js"></script>
 	<script type="text/javascript">
 		$(document).ready(function(){
-			//$('#nav').localscroll(800);
+			$('#nav').localscroll(800);
 			$('#above').parallax("50%", 0.1);
 			$('#second').parallax("50%", 0.1);
 		});
@@ -42,7 +42,7 @@
 			<li><div><a href="./About Us.html">ABOUT US</a></div></li>
 			<li><div><a href="./Photography.html">PHOTOGRAPHY</a></div></li>
 			<li><div><a href="./Illustration.html">ILLUSTRATION</a></div></li>
-			<li><div><a href="./Prose.html" id="own">PROSE</a></div></li>
+			<li><div><a href="#second" id="own">PROSE</a></div></li>
 			<li><div><a href="./Trivia.html">TRIVIA</a></div></li>
 		</ul>
 		</div>
@@ -61,54 +61,147 @@
 	<div class="container">
 		<div class="center">
 			<div class="text-center">
-				<h2>- Novels -</h2>
+				<h2>- NOVEL -</h2>
 				<div class="line"></div>
-			</div>
-		</div>
+			</div><!--text-center-->
+		</div><!--center-->
 		<div class="screen">
 			<ul>
-				<li class="ptitle">123<!--文章標題-->
-					<ul>
-						<li><p>123<!--文章內容--></p></li>
-					</ul>
+				<li class="ptitle"><h3 id="lin">林家事件</h3><br />
+					<p>
+						林家是當時十分興盛的大家族，歷代以租賃土地為業的大地主，相傳地主的兩個<br /><br />
+						女兒都十分漂亮，日軍早就聽說，於似乎他們以拙劣的伎倆打算強搶。當時眼下<br /><br />
+						滿是武裝抗日，他們便以林家謀反為由，強行的擄走林家的大女兒，並兇殘的將<br /><br />
+						林家處決，不留活口，但奇怪的是日軍並沒有找到林家二女兒的身影。而被捉走<br /><br />
+						的大女兒也從此聲無息，沒人知道她的下落，連她在日軍受到什麼待遇都不知道<br /><br />
+						。但在火葬場，某個新月的夜晚，出現了這樣的傳聞，有個長髮披肩的女子一直<br /><br />
+						在尋找什麼，並發出奇怪的聲音，當有人靠近，她就會抬頭露出猙獰被火嚴重燒<br /><br />
+						傷的臉龐。至於這跟林家事件的關聯性有多大則不得而知。<br /><br />
+					</p>
+				</li>	
+			</ul><!--lin-->
+			<ul>
+				<li class="ptitle"><h3 id="kamo">Kamo</h3><br />
+					<p>
+						簡單來說，Kamo指的就是代理孕母。當初侍女阿菊帶著年幼的小姐逃過滅門慘<br /><br />
+						案，但沒受過教育的阿菊卻無力撫養小姐，無奈之下，她只得接受這種仰賴身體<br /><br />
+						的工作，提供自己的肚皮。趁著懷孕的期間，阿菊四處找著可以收留小姐的人，<br /><br />
+						即便委託人支付的足以供兩個人的生活，她卻十分不忍小姐跟在她身旁沒文化的<br /><br />
+						長大，況且代理孕母可以做多久她也不知道。隨著臨盆的日子接近，被逼急的阿<br /><br />
+						菊輕易的相信了看上她頗具幾分姿色的委託人，而踏入了陷阱之中。委託人將阿<br /><br />
+						菊軟禁了起來，甚至還會毆打她，受盡折磨的她也在這時候流產了。當介紹委託<br /><br />
+						人給阿菊的阿大發現異狀並救出她時卻為時已晚，她被折磨的不成人型，對小姐<br /><br />
+						的擔心加上失去孩子的痛導致她精神嚴重的失常。出於愧疚，阿大答應阿菊會肩<br /><br />
+						負小姐的生活，說也奇怪，因精神異常雙眼渙散的阿菊聽到阿大的保證，雙目竟<br /><br />
+						然恢復清明，並滿足的笑了，但也許是緊繃的身體一瞬間放心，她下一秒便香消<br /><br />
+						玉殞。而在多年後阿菊當初被軟禁的房間也傳出不可思議的傳聞，據說常常有人<br /><br />
+						會在那看到阿菊的身影，大家都說可能是她還在那等著阿大將小姐平安長大的消<br /><br />
+						息告訴她吧。<br /><br />
+					</p>
 				</li>
-				<li class="ptitle"><!--文章標題-->
-					<ul>
-						<li><p><!--文章內容--></p></li>
-					</ul>
+			</ul><!--kamo-->
+			<ul>	
+				<li class="ptitle"><h3 id="traitor">背叛</h3><br />
+					<p> 
+						在滿是春意的窗邊，傳出陣陣的咳嗽聲，大家都知道裡頭住了個教書先生的兒子<br /><br />
+						，他虛弱而文青，似乎他的生命幾乎都用來讚頌世界的美好，他曾經天真爛漫，<br /><br />
+						也許是聽說了祖母當年的滅門亡命故事，他更覺得自己應該代替那個年少的祖母<br /><br />
+						開心的活著，有個戀人，有個體貼自己的朋友。〝明翰！跟我們一起走走吧！外<br /><br />
+						面天氣很好呢！〞，那兩張明亮的臉總在窗前，鼓勵著受病魔折磨的他。最親暱<br /><br />
+						的至交，卻也給他帶來最深切的傷害。他以為他的人生會一直那麼美好，直至那<br /><br />
+						天在窗邊聽見的事實讓他被冰冷貫穿，現在的他面色死灰，如那風中的殘葉，隨<br /><br />
+						時都會凋零枯萎。他的戀人是他的青梅竹馬，而他的好友卻是為了接近她，才會<br /><br />
+						待他這般的好。最沉痛的背叛，讓虛弱的他更加虛弱，他躺在床上無法動彈。突<br /><br />
+						然間，喉間傳來窒息感，失去意識前，他只聽到熟悉的聲音，〝對不起，明翰。〞<br /><br />
+						在過了好久以後，很多人都會看見瘦弱的青年掛在窗前隨風飄盪，而大家口耳相<br /><br />
+						傳，因病虛弱的青年受不了朋友和自己的戀人在一起所以自殺了，但不約而同，<br /><br />
+						都有一股異樣感湧上心頭。不過究竟真相是什麼，都已無從考證。<br /><br />
+					</p>
 				</li>
-				<li class="ptitle"><!--文章標題-->
-					<ul>
-						<li><p><!--文章內容--></p></li>
-					</ul>
+			</ul><!--traitor-->
+			<ul>	
+				<li class="ptitle"><h3 id="lose">失和</h3><br />
+					<p>
+						他從小看著父母吵架，明明是愛情長跑，卻這般吵吵鬧鬧很令人不解，他只隱隱<br /><br />
+						約約覺得父母間還夾著一個人，一個他不認識的人。白色恐怖帶走他的父親，但<br /><br />
+						說實話，他並沒有太難過，只不過換他扛起家計罷了。就這樣過了好幾十年，年<br /><br />
+						邁的母親也踏上生命的必然，他才開始整理父母的遺物，也到這時他才明白，父<br /><br />
+						母之間總是圍繞著一個因病去世的少年，但他不懂的是，父親對這名少年總是抱<br /><br />
+						著愧疚，甚至還有點……悔恨？雖然他不太明白當初的經過，他能知道這背後有<br /><br />
+						太多原因。不過他知道了，之前他拿詩賦獎時，父親莫明的不悅，可能是觸動到<br /><br />
+						父親的過往了吧。輕輕嘆口氣，他將這些遺物鎖在櫃子深處，希望這一切糾葛能<br /><br />
+						在這化下句點。回過身他看見門口站著尚年幼的兒子，也許是父親的影響，他也<br /><br />
+						不太明白怎麼當個好父親，他兒子總是很害怕他，本想走過去抱抱兒子，站在門<br /><br />
+						口的兒子卻又一溜煙跑走，雖然無奈，他搖搖頭，只願他兒子能成為頂天立地的<br /><br />
+						少年吧。<br /><br />
+					</p>
+				</li>	
+			</ul><!--lose-->
+			<ul>	
+				<li class="ptitle"><h3 id="bully">霸凌</h3><br />
+					<p>
+						俊嘉是一名大學生，和只會混吃等死的新鮮人不同，他除了顧好課業外，還攬了<br /><br />
+						許多不屬於他的活。雖然他認真負責，但得到的卻不成比例，甚至還受到許多傷<br /><br />
+						害。許多人將他的付出視為理所當然，也有人惡意批評他所做的一切，還有人處<br /><br />
+						處刁難，為的就是不讓他好過。再堅強的人都會累，更何況是被家人過度期待的<br /><br />
+						俊嘉。他的父親總是希望他能出色、有為，沒有一百分，什麼努力都不是。他不<br /><br />
+						知道哪個才是壓垮他的最後一根稻草，是同儕？是家人？還是自己？他反覆聽著<br /><br />
+						音樂盒播放的生日快樂歌，雖然因為年久失修早已跑調，但這是母親送他的第一<br /><br />
+						個也是最後一個生日禮物，俊嘉的母親在他5歲的時候因車禍過世了，模模糊糊<br /><br />
+						，他只記的母親好像很喜歡笑，如果她在，他今日會比較不一樣嗎？這個答案看<br /><br />
+						來自己是永遠不會知道了，雖然很對不起最近向自己表達關心的同學，他也只能<br /><br />
+						希望他們一切都好。站在窗前，突然小時候站在門口窺探的記憶鮮明了起來，他<br /><br />
+						總會在父親房裡的窗邊看見和照片裡一模一樣的爺爺，偶爾還會有一個沒看過的<br /><br />
+						哥哥，因為太過害怕，他也知道嚴肅的父親不會相信他的話，所以每當他父親發<br /><br />
+						現並向他走來，他總會快速的跑走。而現在他不再害怕，只是明白，原來爺爺和<br /><br />
+						哥哥看的是那一片藍天嗎？他慢慢闔上眼，漸漸的不動了，離他不遠的桌上還有<br /><br />
+						一張卡片〝俊嘉，生日快樂。〞<br /><br />
+					</p>
 				</li>
-				<li class="ptitle"><!--文章標題-->
-					<ul>
-						<li><p><!--文章內容--></p></li>
-					</ul>
+			</ul><!--bully-->
+			<ul>
+				<li class="ptitle"><h3 id="over">終結</h3><br />
+					<p>
+						最近，我的朋友自殺了，明明那天該是他開心慶祝生日的日子，回覆我的卡片，<br /><br />
+						卻是一具冰冷的屍體，在告別式上我見到他的父親，他父親除了嚴肅我找不到其<br /><br />
+						他的形容詞，他說如果連自己的生命都把握不好，那就只是個輸家，雖然我覺得<br /><br />
+						自殺不對，也很想問他憑什麼自殺，但看到他的父親我大概能明白他放棄的理由<br /><br />
+						。拿著的地圖，不知不覺我已繞完了學校一圈，正當我不知所措，有人大力撞了<br /><br />
+						我，重心不穩的我，就這樣跌倒了。在我重新站穩之後，我訝異的發現，撞我的<br /><br />
+						人是他──那個隨隨便便就自殺的混蛋。他對我微笑，他也對我說抱歉，他說希<br /><br />
+						望我一切都好，接著他背後卻出現了有著模糊面孔的黑影向他靠近，像是畫面延<br /><br />
+						遲般十分緩慢。瞬間，我的眼前一片黑暗，腦海中出現了SECRET 404 secret is <br /><br />
+						not found 的訊息。<br /><br />
+						我發現我在圖書館裡，我低下頭打開圖書館的書，掉出一張地圖，而地圖就像一<br /><br />
+						般的地圖一樣標示的清清楚楚，我將地圖夾回書裡，我想，明天又是新的一天。<br /><br />
+					</p>
 				</li>
-				<li class="ptitle"><!--文章標題-->
-					<ul>
-						<li><p><!--文章內容--></p></li>
-					</ul>
+			</ul><!--over-->
+			<ul>	
+				<li class="ptitle"><h3 id="white">白色恐怖</h3><br />
+					<p>
+						他聽母親說過，舅舅是一個很厲害的畫家，只可惜他很年輕就死掉了。大家都說<br /><br />
+						虛弱的舅舅因為受不了朋友和自己的青梅竹馬在一起所以自殺了，但母親卻堅持<br /><br />
+						是他殺並非自殺。但每當母親憤慨的說，他只是默默聽著，並沒有放在心上。他<br /><br />
+						是一名軍官，也見證了白色恐怖的濫捕濫殺，常常因一些莫須有的罪名，有些人<br /><br />
+						出了門就在也沒回家。他其實很厭惡這種事情，但他卻不得不做。不過唯有這次<br /><br />
+						，他很慶幸有白色恐怖，讓他遇見了他。他捉到的人是一位教師，那個人一直很<br /><br />
+						平靜不說話，直到要行刑時，他才央求他陪他聊聊天，不知道為什麼，他答應了<br /><br />
+						。那個教師說，他是一個死有餘辜的人，他殺害了自己的好友。聽到這，身為軍<br /><br />
+						官的他很是意外，因為那個教師看起來就是手無縛雞之力的樣子，不過他還是繼<br /><br />
+						續聽下去。教師告訴他，因為他非常喜歡他好友的青梅竹馬，所以他將臥病在床<br /><br />
+						的好友勒死並裝成自殺的模樣，他如願的和他朋友的青梅竹馬在一起了，但他們<br /><br />
+						卻不幸福，他們在一起的時光都圍繞在好友身上，他非常痛苦可是一切都無法重<br /><br />
+						來了。語畢，教師他默默走向絞刑檯，臨死前說了，〝明翰，對不起。〞而他只<br /><br />
+						是默默的看著。吶，舅舅，你們可以見面了。<br /><br />
+					</p>
 				</li>
-				<li class="ptitle"><!--文章標題-->
-					<ul>
-						<li><p><!--文章內容--></p></li>
-					</ul>
-				</li>
-				<li class="ptitle"><!--文章標題-->
-					<ul>
-						<li><p><!--文章內容--></p></li>
-					</ul>
-				</li>
-			</ul>
-		</div>
-	</div>
+			</ul><!--white-->
+		</div><!--screen-->
+	</div><!--container-->
 	<footer class="clear">
 		<p>
 			<a href="#">^</a>
 		</p>
-		<p id="text">Copyrights 2016 / Design by Black and Banana</p>
 	</footer>
 </body>
