--- a/About Us.html
+++ b/About Us.html
@@ -49,7 +49,7 @@
 			<li><div><a href="./Photography.html">PHOTOGRAPHY</a></div></li>
 			<li><div><a href="./Illustration.html">ILLUSTRATION</a></div></li>
 			<li><div><a href="./Prose.html">PROSE</a></div></li>
-			<li><div><a href="#intro">TRIVIA</a></div></li>
+			<li><div><a href="./Trivia.html">TRIVIA</a></div></li>
 		</ul>
 		</div>
 	</nav>
