--- a/Banana Hunter.html
+++ b/Banana Hunter.html
@@ -43,7 +43,7 @@
 			<li><a href="./Photography.html">PHOTOGRAPHY</a></li>
 			<li><a href="./Illustration.html">ILLUSTRATION</a></li>
 			<li><a href="./Prose.html">PROSE</a></li>
-			<li><a href="#intro">TRIVIA</a></li>
+			<li><a href="./Trivia.html">TRIVIA</a></li>
 		</ul>
 	</nav>	
 	<div class="container">
