--- a/Illustration-computer.html
+++ b/Illustration-computer.html
@@ -24,6 +24,8 @@
 			$('#second').parallax("50%", 0.1);
 		})
 	</script>
+	
+	<script type="text/javascript" src="js/hamburger.js"></script>
 
 </head>
 <body>
@@ -35,13 +37,31 @@
         </div>
 	</div>
 	<nav class="site-nav">
+		<div class="big-nav">
 		<ul class="clear" id="nav">
-			<li><div><a href="./Personal Website.html">HOME</a></div></li>
-			<li><div><a href="./About Us.html">ABOUT US</a></div></li>
-			<li><div><a href="./Photography.html">PHOTOGRAPHY</a></div></li>
-			<li><div><a href="./Illustration.html" id="own">ILLUSTRATION</a></div></li>
-			<li><div><a href="./Prose.html">PROSE</a></div></li>
-			<li><div><a href="./Trivia.html">TRIVIA</a></div></li>
+				<li><div><a href="./Personal Website.html">HOME</a></div></li>
+				<li><div><a href="./About Us.html">ABOUT US</a></div></li>
+				<li><div><a href="./Photography.html">PHOTOGRAPHY</a></div></li>
+				<li><div><a href="./Illustration.html" id="own">ILLUSTRATION</a></div></li>
+				<li><div><a href="./Prose.html">PROSE</a></div></li>
+				<li><div><a href="./Trivia.html">TRIVIA</a></div></li>
+		</ul>
+		</div>
+	</nav>
+		<div class="small-nav">
+			<span class="alt-nav">&#9776</span>
+			<ul>
+				<li><div><a href="./Personal Website.html">HOME</a></div></li>
+				<li><div><a href="./About Us.html">ABOUT US</a></div></li>
+				<li><div><a href="./Photography.html">PHOTOGRAPHY</a></div></li>
+				<li><div><a href="./Illustration.html" id="own">ILLUSTRATION</a></div></li>
+				<li><div><a href="./Prose.html">PROSE</a></div></li>
+				<li><div><a href="./Trivia.html">TRIVIA</a></div></li>
+			</ul>
+		</div>
+	<nav class="site-nav">
+		<ul class="clear" id="nav">
+			
 		</ul>
 	</nav>
 	<div class="container">
