--- a/Illustration-hand.html
+++ b/Illustration-hand.html
@@ -35,15 +35,28 @@
         </div>
 	</div>
 	<nav class="site-nav">
+		<div class="big-nav">
 		<ul class="clear" id="nav">
-			<li><div><a href="./Personal Website.html">HOME</a></div></li>
-			<li><div><a href="./About Us.html">ABOUT US</a></div></li>
-			<li><div><a href="./Photography.html">PHOTOGRAPHY</a></div></li>
-			<li><div><a href="./Illustration.html" id="own">ILLUSTRATION</a></div></li>
-			<li><div><a href="./Prose.html">PROSE</a></div></li>
-			<li><div><a href="./Trivia.html">TRIVIA</a></div></li>
+				<li><div><a href="./Personal Website.html">HOME</a></div></li>
+				<li><div><a href="./About Us.html">ABOUT US</a></div></li>
+				<li><div><a href="./Photography.html">PHOTOGRAPHY</a></div></li>
+				<li><div><a href="./Illustration.html" id="own">ILLUSTRATION</a></div></li>
+				<li><div><a href="./Prose.html">PROSE</a></div></li>
+				<li><div><a href="./Trivia.html">TRIVIA</a></div></li>
 		</ul>
-	</nav>	
+		</div>
+	</nav>
+		<div class="small-nav">
+			<span class="alt-nav">&#9776</span>
+			<ul>
+				<li><div><a href="./Personal Website.html">HOME</a></div></li>
+				<li><div><a href="./About Us.html">ABOUT US</a></div></li>
+				<li><div><a href="./Photography.html">PHOTOGRAPHY</a></div></li>
+				<li><div><a href="./Illustration.html" id="own">ILLUSTRATION</a></div></li>
+				<li><div><a href="./Prose.html">PROSE</a></div></li>
+				<li><div><a href="./Trivia.html">TRIVIA</a></div></li>
+			</ul>
+		</div>
 	<div class="container">
 		<div class="center">
 			<div class="text-center">
