--- a/Prose.html
+++ b/Prose.html
@@ -68,7 +68,7 @@
 			<div class="left">
 				<div class="hover">
 					
-					<img src="./images/prose/img_novelpicture.jpg" />
+					<img src="./images/prose/img_novelpicture.png" />
 					<img src="./images/prose/img_novel.png" />
 				</div>
 			</div>
