--- a/Prose.html
+++ b/Prose.html
@@ -77,7 +77,7 @@
 			<div class="right">
 				<div class="hover">
 					
-					<img src="./images/illustration/img_mermaid.png" />
+					<img src="./images/illustration/img_mermaid.jpg" />
 					<img src="./images/prose/img_prose.png" />
 				</div>
 			</div>
