--- a/Prose-散文集.html
+++ b/Prose-散文集.html
@@ -42,7 +42,7 @@
 			<li><div><a href="./About Us.html">ABOUT US</a></div></li>
 			<li><div><a href="./Photography.html">PHOTOGRAPHY</a></div></li>
 			<li><div><a href="./Illustration.html">ILLUSTRATION</a></div></li>
-			<li><div><a href="#second" id="own">PROSE</a></div></li>
+			<li><div><a href="./Prose.html" id="own">PROSE</a></div></li>
 			<li><div><a href="./Trivia.html">TRIVIA</a></div></li>
 		</ul>
 		</div>
