--- a/Banana Hunter.html
+++ b/Banana Hunter.html
@@ -56,7 +56,7 @@
 			<img src="./images/illustration/img_mermaid.jpg" />
 			<p class="name">葉容辰</p>
 			<p class="birth">生日: 4 / 20</p>
-			<p class="interest">興趣 : 閱讀 排球 跟林靜講話</p>
+			<p class="interest">興趣 : 閱讀 排球 林靜講話</p>
 			<div class="line"></div>
 			<p class="school">經歷</p>
 			<p class="university">國立台北教育大學 數位科技設計學系 尚未畢業</p>
