--- a/About Us.html
+++ b/About Us.html
@@ -76,7 +76,7 @@
 			<div class="left">
 				<div class="hover">
 					<img src="./images/aboutus/img_Ariel.jpg" />
-					<img src="./images/illustration/img_luffy.jpg" />
+					<img src="./images/aboutus/black.jpg" />
 				</div>
 			</div>
 		</a>
@@ -84,7 +84,7 @@
 			<div class="right">
 				<div class="hover">
 					<img src="./images/aboutus/img_Banana.jpg" />
-					<img src="./images/illustration/img_mermaid.jpg" />
+					<img src="./images/aboutus/banana.jpg" />
 				</div>
 			</div>
 		</a>
