--- a/Ariel Wu.html
+++ b/Ariel Wu.html
@@ -53,7 +53,7 @@
 				<div class="line"></div>
 			</div>
 			
-			<img src="./images/illustration/img_luffy.jpg" />
+			<img src="./images/aboutus/black.jpg" />
 			<p class="name">吳汶倩</p>
 			<p class="birth">生日: 4 / 15</p>
 			<p class="interest">興趣 : 攝影 繪圖 排球 羽球</p>
