--- a/Banana Hunter.html
+++ b/Banana Hunter.html
@@ -53,7 +53,7 @@
 				<div class="line"></div>
 			</div>
 			
-			<img src="./images/illustration/img_mermaid.jpg" />
+			<img src="./images/aboutus/banana.jpg" />
 			<p class="name">葉容辰</p>
 			<p class="birth">生日: 4 / 20</p>
 			<p class="interest">興趣 : 閱讀 排球 林靜講話</p>
