--- a/Ariel Wu.html
+++ b/Ariel Wu.html
@@ -57,7 +57,7 @@
 			<p class="name">吳汶倩</p>
 			<p class="birth">生日: 4 / 15</p>
 			<p class="interest">興趣 : 攝影 繪圖 排球 羽球</p>
-			<p class="email">e-mail : ariel070415@gmail.com</p>
+			<!--<p class="email">e-mail : ariel070415@gmail.com</p>-->
 			<div class="line"></div>
 			<p class="school">經歷</p>
 			<p class="university">國立台北教育大學 數位科技設計學系 尚未畢業</p>
