--- a/About Us.html
+++ b/About Us.html
@@ -44,7 +44,7 @@
 	<nav class="site-nav">
 		<div class="big-nav">
 		<ul class="clear" id="nav">
-			<li><div><a href="./index.html">HOME</a></div></li>
+			<li><div><a href="https://arielwu415.github.io/just.us/">HOME</a></div></li>
 			<li><div><a href="#fifth" id="own">ABOUT US</a></div></li>
 			<li><div><a href="./Photography.html">PHOTOGRAPHY</a></div></li>
 			<li><div><a href="./Illustration.html">ILLUSTRATION</a></div></li>
