--- a/Ariel Wu.html
+++ b/Ariel Wu.html
@@ -32,7 +32,7 @@
 	</div>
 	<nav class="site-nav">
 		<ul class="clear" id="nav">
-			<li><a href="./index.html">HOME</a></li>
+			<li><a href="https://arielwu415.github.io/just.us/">HOME</a></li>
 			<li>
 				<a href="./About Us.html" id="own">ABOUT US</a>
 				<!--<ul>
