--- a/Illustration-computer.html
+++ b/Illustration-computer.html
@@ -39,7 +39,7 @@
 	<nav class="site-nav">
 		<div class="big-nav">
 		<ul class="clear" id="nav">
-				<li><div><a href="./Personal Website.html">HOME</a></div></li>
+				<li><div><a href="https://arielwu415.github.io/just.us/">HOME</a></div></li>
 				<li><div><a href="./About Us.html">ABOUT US</a></div></li>
 				<li><div><a href="./Photography.html">PHOTOGRAPHY</a></div></li>
 				<li><div><a href="./Illustration.html" id="own">ILLUSTRATION</a></div></li>
@@ -51,7 +51,7 @@
 		<div class="small-nav">
 			<span class="alt-nav">&#9776</span>
 			<ul>
-				<li><div><a href="./Personal Website.html">HOME</a></div></li>
+				<li><div><a href="https://arielwu415.github.io/just.us/">HOME</a></div></li>
 				<li><div><a href="./About Us.html">ABOUT US</a></div></li>
 				<li><div><a href="./Photography.html">PHOTOGRAPHY</a></div></li>
 				<li><div><a href="./Illustration.html" id="own">ILLUSTRATION</a></div></li>
