--- a/Illustration.html
+++ b/Illustration.html
@@ -43,7 +43,7 @@
 	<nav class="site-nav">
 		<div class="big-nav">
 		<ul class="clear" id="nav">
-			<li><div><a href="./Personal Website.html">HOME</a></div></li>
+			<li><div><a href="https://arielwu415.github.io/just.us/">HOME</a></div></li>
 			<li><div><a href="./About Us.html">ABOUT US</a></div></li>
 			<li><div><a href="./Photography.html">PHOTOGRAPHY</a></div></li>
 			<li><div><a href="#third" id="own">ILLUSTRATION</a></div></li>
