--- a/Prose-小說集.html
+++ b/Prose-小說集.html
@@ -38,7 +38,7 @@
 	<nav class="site-nav">
 		<div class="big-nav">
 		<ul class="clear" id="nav">
-			<li><div><a href="./Personal Website.html">HOME</a></div></li>
+			<li><div><a href="https://arielwu415.github.io/just.us/">HOME</a></div></li>
 			<li><div><a href="./About Us.html">ABOUT US</a></div></li>
 			<li><div><a href="./Photography.html">PHOTOGRAPHY</a></div></li>
 			<li><div><a href="./Illustration.html">ILLUSTRATION</a></div></li>
@@ -50,7 +50,7 @@
 		<div class="small-nav">
 			<span class="alt-nav">&#9776</span>
 			<ul>
-				<li><div><a href="./Personal Website.html">HOME</a></div></li>
+				<li><div><a href="https://arielwu415.github.io/just.us/">HOME</a></div></li>
 				<li><div><a href="./About Us.html">ABOUT US</a></div></li>
 				<li><div><a href="./Photography.html">PHOTOGRAPHY</a></div></li>
 				<li><div><a href="./Illustration.html">ILLUSTRATION</a></div></li>
