--- a/Trivia.html
+++ b/Trivia.html
@@ -31,7 +31,7 @@
 	</div>
 	<nav class="site-nav">
 		<ul class="clear" id="nav">
-			<li><div><a href="./Personal Website.html">HOME</a></div></li>
+			<li><div><a href="https://arielwu415.github.io/just.us/">HOME</a></div></li>
 			<li><div><a href="./About Us.html">ABOUT US</a></div></li>
 			<li><div><a href="./Photography.html">PHOTOGRAPHY</a></div></li>
 			<li><div><a href="./Illustration.html">ILLUSTRATION</a></div></li>
