--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 			<div class="story">
 				<div class="float-left">
 					<img src="./images/img_LOGO.png" id="logo" />
-					<h1>JUST US.</h1>
+					<h1>MEOWMEOW</h1>
 				</div>
            	 </div>
 		</div>
