Change it back to the original.

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
 		<a name="intro"><div id="intro" style="background-position: 50% 0px;">
 			<div class="story">
 				<div class="float-left">
-					<img src="./images/img_LOGO.png" id="logo" /
-					<h1>JUST US.(Test)</h1>
+					<img src="./images/img_LOGO.png" id="logo" />
+					<h1>JUST US.</h1>
 				</div>
            	 </div>
 		</div>
